--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "classnames": "^2.3.2",
     "eslint": "8.22.0",
     "eslint-config-next": "13.1.5",
+    "formik": "^2.2.9",
     "i18next": "^22.4.11",
     "next": "13.1.5",
     "next-i18next": "^13.2.2",
+    "object-to-formdata": "^4.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
