--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.22.0",
     "eslint-config-next": "13.1.5",
+    "firebase": "^9.18.0",
     "formik": "^2.2.9",
     "i18next": "^22.4.11",
     "next": "13.1.5",
